// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots About Item Modal default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open About This Item Modal"
      className="item-nav-btn btn btn-link"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-info-sign glyphicon-pad"
      />
      About This Item
    </button>
  </div>
</div>
`;

exports[`Storyshots About Item Modal showing no rubrics 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open About This Item Modal"
      className="item-nav-btn btn btn-link"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-info-sign glyphicon-pad"
      />
      About This Item
    </button>
  </div>
</div>
`;

exports[`Storyshots About Item Modal showing rubrics 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open About This Item Modal"
      className="item-nav-btn btn btn-link"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-info-sign glyphicon-pad"
      />
      About This Item
    </button>
  </div>
</div>
`;

exports[`Storyshots About Item Modal showing rubrics ENU ESN 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open About This Item Modal"
      className="item-nav-btn btn btn-link"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-info-sign glyphicon-pad"
      />
      About This Item
    </button>
  </div>
</div>
`;

exports[`Storyshots About Item Modal showing rubrics ESN 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open About This Item Modal"
      className="item-nav-btn btn btn-link"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-info-sign glyphicon-pad"
      />
      About This Item
    </button>
  </div>
</div>
`;

exports[`Storyshots About Test Items bad item type 1`] = `
<div
  className="about-items"
>
  <div
    className="aboutitems-parents"
  >
    <div
      className="aboutitems-info"
    >
      <h1>
        About Test Items
      </h1>
      <div
        className="aboutitems-text"
      >
        Smarter Balanced assessments use a variety of item types to accurately measure what students know and can do. To learn more and see an example item, select an item type below.
      </div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <div
      className="no-item"
    >
      <p>
        No items of the selected type found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots About Test Items default 1`] = `
<div
  className="about-items"
>
  <div
    className="aboutitems-parents"
  >
    <div
      className="aboutitems-info"
    >
      <h1>
        About Test Items
      </h1>
      <div
        className="aboutitems-text"
      >
        Smarter Balanced assessments use a variety of item types to accurately measure what students know and can do. To learn more and see an example item, select an item type below.
      </div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <div
      className="no-item"
    >
      <p>
        No items of the selected type found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots About Test Items default, param 1`] = `
<div
  className="about-items"
>
  <div
    className="aboutitems-parents"
  >
    <div
      className="aboutitems-info"
    >
      <h1>
        About Test Items
      </h1>
      <div
        className="aboutitems-text"
      >
        Smarter Balanced assessments use a variety of item types to accurately measure what students know and can do. To learn more and see an example item, select an item type below.
      </div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <div
      className="no-item"
    >
      <p>
        No items of the selected type found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots About Test Items loading, param 1`] = `
<div
  className="about-items"
>
  <div
    className="aboutitems-parents"
  >
    <div
      className="aboutitems-info"
    >
      <h1>
        About Test Items
      </h1>
      <div
        className="aboutitems-text"
      >
        Smarter Balanced assessments use a variety of item types to accurately measure what students know and can do. To learn more and see an example item, select an item type below.
      </div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <div
      className="no-item"
    >
      <p>
        No items of the selected type found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots About Test Items reject, param 1`] = `
<div
  className="about-items"
>
  <div
    className="aboutitems-parents"
  >
    <div
      className="aboutitems-info"
    >
      <h1>
        About Test Items
      </h1>
      <div
        className="aboutitems-text"
      >
        Smarter Balanced assessments use a variety of item types to accurately measure what students know and can do. To learn more and see an example item, select an item type below.
      </div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <div
      className="no-item"
    >
      <p>
        No items of the selected type found.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots About This Item Detail displays information about an item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="item-details"
  >
    <p
      className="card-text subject"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Subject
        :
      </span>
      <span
        className="card-text-value"
      >
         
        ELA
      </span>
    </p>
    <p
      className="card-text grade"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Grade
        :
      </span>
      <span
        className="card-text-value"
      >
         
        Grade 4
      </span>
    </p>
    <p
      className="card-text claim"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Claim
        :
      </span>
      <span
        className="card-text-value"
      >
         
        Claim
      </span>
    </p>
    <p
      className="card-text target"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Target
        :
      </span>
      <span
        className="card-text-value"
      >
         
        Short Name
      </span>
    </p>
    <p
      className="card-text interaction-type"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Item Type
        :
      </span>
      <span
        className="card-text-value"
      >
         
        Item Type
      </span>
    </p>
    <p
      className="card-text item-id"
      tabIndex={0}
    >
      <span
        className="card-text-label"
      >
        Item Id
        :
      </span>
      <span
        className="card-text-value"
      >
         
        3434
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Accessibility DropDown all disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="accessibility-dropdown form-group selection-enabled"
  >
    <label
      htmlFor="Default"
    >
       
      Notepad
    </label>
    <br />
    <select
      aria-hidden={false}
      className="form-control"
      disabled={false}
      id="Default"
      onChange={[Function]}
      value="TDS_SCNotepad"
    >
      <option
        aria-hidden={true}
        aria-label="Notepad on"
        className="option-disabled"
        disabled={true}
        value="TDS_SCNotepad"
      >
        Notepad on
      </option>
      <option
        aria-hidden={true}
        aria-label="Notepad off"
        className="option-disabled"
        disabled={true}
        value="TDS_SC0"
      >
        Notepad off
      </option>
      <option
        aria-hidden={true}
        aria-label="Notepad disabled"
        className="option-disabled"
        disabled={true}
        value="TDS_SC9"
      >
        Notepad disabled
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Accessibility DropDown default with disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="accessibility-dropdown form-group selection-enabled"
  >
    <label
      htmlFor="Default"
    >
       
      Notepad
    </label>
    <br />
    <select
      aria-hidden={false}
      className="form-control"
      disabled={false}
      id="Default"
      onChange={[Function]}
      value="TDS_SCNotepad"
    >
      <option
        aria-hidden={false}
        aria-label="Notepad on"
        className="option-enabled"
        disabled={false}
        value="TDS_SCNotepad"
      >
        Notepad on
      </option>
      <option
        aria-hidden={false}
        aria-label="Notepad off"
        className="option-enabled"
        disabled={false}
        value="TDS_SC0"
      >
        Notepad off
      </option>
      <option
        aria-hidden={true}
        aria-label="Notepad disabled"
        className="option-disabled"
        disabled={true}
        value="TDS_SC9"
      >
        Notepad disabled
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Accessibility DropDown dropdown disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="accessibility-dropdown form-group selection-disabled"
  >
    <label
      htmlFor="Default"
    >
       
      Notepad
    </label>
    <br />
    <select
      aria-hidden={true}
      className="form-control"
      disabled={true}
      id="Default"
      onChange={[Function]}
      value="TDS_SCNotepad"
    >
      <option
        aria-hidden={true}
        aria-label="Notepad on"
        className="option-disabled"
        disabled={true}
        value="TDS_SCNotepad"
      >
        
      </option>
      <option
        aria-hidden={true}
        aria-label="Notepad off"
        className="option-disabled"
        disabled={true}
        value="TDS_SC0"
      >
        
      </option>
      <option
        aria-hidden={true}
        aria-label="Notepad disabled"
        className="option-disabled"
        disabled={true}
        value="TDS_SC9"
      >
        
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Accessibility DropDown no selections 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="accessibility-dropdown form-group selection-enabled"
  >
    <label
      htmlFor="Default"
    >
       
      Notepad
    </label>
    <br />
    <select
      aria-hidden={false}
      className="form-control"
      disabled={false}
      id="Default"
      onChange={[Function]}
      value="TDS_SCNotepad"
    />
  </div>
</div>
`;

exports[`Storyshots Accessibility Modal few options hiding 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open Accessibility Modal"
      className="accessibility-btn btn btn-primary"
      onClick={[Function]}
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-collapse-down"
      >
        Accessibility
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Accessibility Modal many options showing  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open Accessibility Modal"
      className="accessibility-btn btn btn-primary"
      onClick={[Function]}
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-collapse-down"
      >
        Accessibility
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Accessibility Modal no options showing  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div>
    <button
      aria-label="Open Accessibility Modal"
      className="accessibility-btn btn btn-primary"
      onClick={[Function]}
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-collapse-down"
      >
        Accessibility
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="disabled-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Disabled
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter disabled multi 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="disabled multi-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Disabled Multi
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter disabled multi all 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="multi all disabled-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Multi All Disabled
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-all-btn-container"
      >
        <button
          className="filter-all-btn  selected-button filter-button"
          onClick={[Function]}
        >
          All
        </button>
      </div>
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter disabled with selections 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="disabled-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Disabled
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      >
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter multi select 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="multi-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Multi
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      >
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter multi select all  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="multi all-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Multi All
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-all-btn-container"
      >
        <button
          className="filter-all-btn  selected-button filter-button"
          onClick={[Function]}
        >
          All
        </button>
      </div>
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter multi select all selected  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="multi all-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Multi All
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-all-btn-container"
      >
        <button
          className="filter-all-btn  filter-button"
          onClick={[Function]}
        >
          All
        </button>
      </div>
      <div
        className="filter-button-container"
      >
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className="selected-button filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter no options 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="subjects-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Subjects
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter single select 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="subjects-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Subjects
      </span>
      <span
        data-tooltip="Subject Help"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          English Literacy/ Arts
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Mathematics
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilterContainer normal render 1`] = `
<div
  className="advanced-filter-container"
>
  <div
    className="filter-sub-header-container"
  >
    <div
      className="filter-advanced-filter-header"
    >
      <div
        className="filter-advanced-filter-title"
      >
        <h2
          style={
            Object {
              "color": "#63666A",
            }
          }
        >
          <span
            className="fa fa-tasks fa-lg"
          />
           Advanced Filters
        </h2>
        <span
          style={
            Object {
              "marginTop": "6px",
            }
          }
        >
           Click on an item to remove it from the list
        </span>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "marginRight": "10px",
          }
        }
      >
        <button
          className="filter-button"
          onClick={[Function]}
        >
          Expand 
          <span
            className="fa fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="filter-header"
    >
      <div
        className="filter-status"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter DropDown: multiple filter items 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade-basic-filter"
  >
    <label>
      Grade
    </label>
    <div
      className="basic-filter-body"
    >
      <select
        onChange={[Function]}
      >
        <option
          value="12346"
        >
          Grade 1
        </option>
        <option
          value="12347"
        >
          Grade 2
        </option>
        <option
          value="12345"
        >
          Grade
        </option>
        <option
          value="12348"
        >
          Grade 4
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter DropDown: one filter item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade-basic-filter"
  >
    <label>
      Grade
    </label>
    <div
      className="basic-filter-body"
    >
      <select
        onChange={[Function]}
      >
        <option
          value="12345"
        >
          Grade
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter RadioBtn: multiple filter items 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade-basic-filter"
  >
    <label>
      Grade
    </label>
    <div
      className="basic-filter-body"
    >
      <form>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12346"
          />
          Grade 1
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12347"
          />
          Grade 2
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12345"
          />
          Grade
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12348"
          />
          Grade 4
        </label>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter RadioBtn: one filter item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade-basic-filter"
  >
    <label>
      Grade
    </label>
    <div
      className="basic-filter-body"
    >
      <form>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12345"
          />
          Grade
        </label>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilterContainer Basic Filter only 1`] = `
<div
  className="basic-filter-container"
>
  <div
    className="basic-filter"
  >
    <div
      className="basic-filter-selection"
      id="grade-basic-filter"
    >
      <label>
        Grade
      </label>
      <div
        className="basic-filter-body"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="7"
          >
            Grades 3-5
          </option>
          <option
            value="56"
          >
            Grades 6-8
          </option>
          <option
            value="960"
          >
            High School
          </option>
        </select>
      </div>
    </div>
    <div
      className="basic-filter-selection"
      id="subjects-basic-filter"
    >
      <label>
        Subjects
      </label>
      <div
        className="basic-filter-body"
      >
        <form>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="ELA"
            />
            English Literacy/ Arts
          </label>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="Math"
            />
            Mathematics
          </label>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilterContainer Basic Filter with Advanced filter expansion button 1`] = `
<div
  className="basic-filter-container"
>
  <div
    className="basic-filter"
  >
    <div
      className="basic-filter-selection"
      id="grade-basic-filter"
    >
      <label>
        Grade
      </label>
      <div
        className="basic-filter-body"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="7"
          >
            Grades 3-5
          </option>
          <option
            value="56"
          >
            Grades 6-8
          </option>
          <option
            value="960"
          >
            High School
          </option>
        </select>
      </div>
    </div>
    <div
      className="basic-filter-selection"
      id="subjects-basic-filter"
    >
      <label>
        Subjects
      </label>
      <div
        className="basic-filter-body"
      >
        <form>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="ELA"
            />
            English Literacy/ Arts
          </label>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="Math"
            />
            Mathematics
          </label>
        </form>
      </div>
    </div>
  </div>
  <div
    className="basic-filter-button-container"
  >
    <div>
      Advanced Filters
    </div>
    <button
      className="filter-button"
      onClick={[Function]}
    >
      Show
       
      <span
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Container Contains both Basic and Advanced Filter 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-container"
  >
    <div
      className="basic-filter"
    >
      <div
        className="basic-filter-selection"
        id="grade-basic-filter"
      >
        <label>
          Grade
        </label>
        <div
          className="basic-filter-body"
        >
          <select
            onChange={[Function]}
          >
            <option
              value="7"
            >
              Grades 3-5
            </option>
            <option
              value="56"
            >
              Grades 6-8
            </option>
            <option
              value="960"
            >
              High School
            </option>
          </select>
        </div>
      </div>
      <div
        className="basic-filter-selection"
        id="subjects-basic-filter"
      >
        <label>
          Subjects
        </label>
        <div
          className="basic-filter-body"
        >
          <form>
            <label>
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="ELA"
              />
              English Literacy/ Arts
            </label>
            <label>
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="Math"
              />
              Mathematics
            </label>
          </form>
        </div>
      </div>
    </div>
    <div
      className="basic-filter-button-container"
    >
      <div>
        Advanced Filters
      </div>
      <button
        className="filter-button"
        onClick={[Function]}
      >
        Show
         
        <span
          className="fa fa-chevron-right"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ItemCard Item Card 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="card card-block ela"
    onClick={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <div
      className="card-contents"
    >
      <h4
        className="card-title"
        onClick={[Function]}
        onKeyUp={[Function]}
      >
        ELA Grade 4
      </h4>
      <p
        className="card-text subject"
      >
        <span
          className="card-text-label"
        >
          Subject:
        </span>
        <span
          className="card-text-value"
        >
           
          ELA
        </span>
      </p>
      <p
        className="card-text grade"
      >
        <span
          className="card-text-label"
        >
          Grade:
        </span>
        <span
          className="card-text-value"
        >
           
          Grade 4
        </span>
      </p>
      <p
        className="card-text claim"
      >
        <span
          className="card-text-label"
        >
          Claim:
        </span>
        <span
          className="card-text-value"
        >
           
          Claim
        </span>
      </p>
      <p
        className="card-text target"
      >
        <span
          className="card-text-label"
        >
          Target:
        </span>
        <span
          className="card-text-value"
        >
          Short Name
        </span>
      </p>
      <p
        className="card-text interaction-type"
      >
        <span
          className="card-text-label"
        >
          Item Type:
        </span>
        <span
          className="card-text-value"
        >
           
          Item Type
        </span>
      </p>
      <p
        className="card-text item-id"
      >
        <span
          className="card-text-label"
        >
          Item Id:
        </span>
        <span
          className="card-text-value"
        >
           
          3434
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots ItemCard Item Card Condensed 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="card card-block ela condensed"
    onClick={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <div
      className="card-contents"
    >
      <h4
        className="card-title"
      >
        ELA
      </h4>
      <p
        className="card-text claim"
      >
        <span
          className="card-text-label"
        >
          Claim:
        </span>
        <span
          className="card-text-value"
        >
           
          Claim
        </span>
      </p>
      <p
        className="card-text target"
      >
        <span
          className="card-text-label"
        >
          Target:
        </span>
        <span
          className="card-text-value"
        >
           
          Short Name
        </span>
      </p>
      <p
        className="card-text interaction-type"
      >
        <span
          className="card-text-label"
        >
          Item Type:
        </span>
        <span
          className="card-text-value"
        >
           
          Item Type
        </span>
      </p>
      <p
        className="card-text item-id"
      >
        <span
          className="card-text-label"
        >
          Item Id:
        </span>
        <span
          className="card-text-value"
        >
           
          3434
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Footer default footer 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <footer
    role="contentinfo"
  >
    <a
      className="footer-sbLink footer-practiceTests"
      href="http://practice.smarterbalanced.org/"
    >
      Practice and training tests are available here.
    </a>
    <div
      className="footer-copyright"
    >
      <p>
        © The Regents of the University of California – Smarter Balanced Assessment Consortium
         
      </p>
      <a
        className="footer-sbLink"
        href="//www.smarterbalanced.org"
      >
         
        www.SmarterBalanced.org
      </a>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Layout name links and body 1`] = `
<div
  className="site-body"
>
  <header
    role="navigation"
  >
    <div
      className="skip-link"
      id="skip-main"
    >
      <a
        className="skip-link"
        href="/#main"
        onClick={[Function]}
      >
        Skip to main content
      </a>
    </div>
    <nav
      role="navigation"
    >
      <div
        className="sbNav"
      >
        <div
          className="sbNav-titleGroup"
        >
          <div
            className="sbNav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="/Images/SmarterBalanced_logo.png"
              />
            </a>
          </div>
          <div
            className="sbNav-titleGroup-item"
          >
            <h3>
              Test
            </h3>
          </div>
        </div>
        <div
          className="sbNav-linksGroup"
        >
          <a
            className="sbNav-linksGroup-item"
            href="url1"
            onClick={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            link1
          </a>
          <a
            className="sbNav-linksGroup-item"
            href="url2"
            onClick={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            link2
          </a>
        </div>
      </div>
    </nav>
  </header>
  <main
    className="container site-content"
    id="main"
    role="main"
  >
    <div
      className="test-container"
    >
      <div
        className="container"
      >
        <p>
          Test Body...
        </p>
      </div>
    </div>
  </main>
  <footer
    role="contentinfo"
  >
    <a
      className="footer-sbLink footer-practiceTests"
      href="http://practice.smarterbalanced.org/"
    >
      Practice and training tests are available here.
    </a>
    <div
      className="footer-copyright"
    >
      <p>
        © The Regents of the University of California – Smarter Balanced Assessment Consortium
         
      </p>
      <a
        className="footer-sbLink"
        href="//www.smarterbalanced.org"
      >
         
        www.SmarterBalanced.org
      </a>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Layout name no links no body 1`] = `
<div
  className="site-body"
>
  <header
    role="navigation"
  >
    <div
      className="skip-link"
      id="skip-main"
    >
      <a
        className="skip-link"
        href="/#main"
        onClick={[Function]}
      >
        Skip to main content
      </a>
    </div>
    <nav
      role="navigation"
    >
      <div
        className="sbNav"
      >
        <div
          className="sbNav-titleGroup"
        >
          <div
            className="sbNav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="/Images/SmarterBalanced_logo.png"
              />
            </a>
          </div>
          <div
            className="sbNav-titleGroup-item"
          >
            <h3>
              Test
            </h3>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <main
    className="container site-content"
    id="main"
    role="main"
  />
  <footer
    role="contentinfo"
  >
    <a
      className="footer-sbLink footer-practiceTests"
      href="http://practice.smarterbalanced.org/"
    >
      Practice and training tests are available here.
    </a>
    <div
      className="footer-copyright"
    >
      <p>
        © The Regents of the University of California – Smarter Balanced Assessment Consortium
         
      </p>
      <a
        className="footer-sbLink"
        href="//www.smarterbalanced.org"
      >
         
        www.SmarterBalanced.org
      </a>
    </div>
  </footer>
</div>
`;

exports[`Storyshots LayoutNav name links 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <header
    role="navigation"
  >
    <div
      className="skip-link"
      id="skip-main"
    >
      <a
        className="skip-link"
        href="/#main"
        onClick={[Function]}
      >
        Skip to main content
      </a>
    </div>
    <nav
      role="navigation"
    >
      <div
        className="sbNav"
      >
        <div
          className="sbNav-titleGroup"
        >
          <div
            className="sbNav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="/Images/SmarterBalanced_logo.png"
              />
            </a>
          </div>
          <div
            className="sbNav-titleGroup-item"
          >
            <h3>
              Test
            </h3>
          </div>
        </div>
        <div
          className="sbNav-linksGroup"
        >
          <a
            className="sbNav-linksGroup-item"
            href="url1"
            onClick={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            link1
          </a>
          <a
            className="sbNav-linksGroup-item"
            href="url2"
            onClick={[Function]}
            style={undefined}
          >
            <span
              className=""
            />
             
            link2
          </a>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`Storyshots LayoutNav name no links 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <header
    role="navigation"
  >
    <div
      className="skip-link"
      id="skip-main"
    >
      <a
        className="skip-link"
        href="/#main"
        onClick={[Function]}
      >
        Skip to main content
      </a>
    </div>
    <nav
      role="navigation"
    >
      <div
        className="sbNav"
      >
        <div
          className="sbNav-titleGroup"
        >
          <div
            className="sbNav-titleGroup-item"
          >
            <a
              href="http://www.smarterbalanced.org/"
              target="_blank"
              title="Smarter Balanced Home"
            >
              <img
                alt="Smarter Balanced Logo"
                src="/Images/SmarterBalanced_logo.png"
              />
            </a>
          </div>
          <div
            className="sbNav-titleGroup-item"
          >
            <h3>
              Test
            </h3>
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`Storyshots PDF Cover Page Cover Page 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div
    className="page first-page"
  >
    <div
      className="first-page-title"
    >
      Smarter Balanced
      <br />
      Assessment Consortium
    </div>
    <div
      className="first-page-subtitle"
    >
      Mathematics
       Practice Test Scoring Guide
      <br />
      <strong>
        High School
      </strong>
    </div>
    <div
      className="first-page-date"
    >
      10
      /
      21
      /
      2017
    </div>
  </div>
</div>
`;

exports[`Storyshots PDF Item Metadata Evidence Statement 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div
    className="centered-table-container"
  >
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Evidence Statement
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            This is the evidence statement
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF Item Metadata Item Card Table 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <table
    className="item-data-table"
  >
    <thead>
      <tr>
        <th>
          Item
        </th>
        <th>
          Claim
        </th>
        <th>
          Domain
        </th>
        <th>
          Target
        </th>
        <th>
          DOK
        </th>
        <th>
          Standards
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          187
          -
          3434
        </td>
        <td>
          3
        </td>
        <td>
          domain
        </td>
        <td>
          dfas
        </td>
        <td>
          2
        </td>
        <td>
          AB-123
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots PDF Rubric Table Rubric Table 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
          <th>
            Exemplar
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did not do the problem",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = _",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student tried to do the problem, but got it wrong",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = 56<br/>5 + 6 = a million",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did the problem correctly",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = 11",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF Rubric Table Rubric Table: multiple 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
          <th>
            Exemplar
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did not do the problem",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = _",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student tried to do the problem, but got it wrong",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = 56<br/>5 + 6 = a million",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did the problem correctly",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "5 + 6 = 11",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did not do the problem",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student tried to do the problem, but got it wrong",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did the problem correctly",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots PDF Rubric Table Rubric Table: no Samples 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #ccc",
      "margin": "20px auto",
      "minHeight": "11in",
      "padding": ".75in",
      "width": "8.5in",
    }
  }
>
  <div>
    <table
      className="item-data-table"
    >
      <thead>
        <tr>
          <th>
            Score
          </th>
          <th>
            Rationale
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did not do the problem",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            1
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student tried to do the problem, but got it wrong",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            dangerouslySetInnerHTML={
              Object {
                "__html": "Student did the problem correctly",
              }
            }
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
